2007-02-24  Akim Demaille  <akim.demaille@free.fr>

	Scope reduction
	* src/userver.cc (memory): Here.

2007-02-24  Akim Demaille  <akim.demaille@free.fr>

	Morph slowly UString into std::string
	* src/ustring.hh, src/ustring.cc (str, len): Rename as...
	(c_str, size): these.
	(setLen): Remove, unused, and frankly, should never have existed.

	* src/parser/bison/ugrammar.y,
	* src/parser/bison/utoken.l,
	* src/parser/uparser.cc,
	* src/ucallid.cc,
	* src/ucallid.hh,
	* src/ucommand.cc,
	* src/uconnection.cc,
	* src/ueventhandler.cc,
	* src/ueventinstance.cc,
	* src/ueventmatch.cc,
	* src/uexpression.cc,
	* src/ufunction.cc,
	* src/ugroup.cc,
	* src/unamedparameters.cc,
	* src/uobj.cc,
	* src/uobject.cc,
	* src/userver.cc,
	* src/uvalue.cc,
	* src/uvar.cc,
	* src/uvariable.cc,
	* src/uvariablename.cc:
	Adjust.
	Also, name ostringstreams as o.

2007-02-22  Akim Demaille  <demaille@gostai.com>

	svn merge -r 860:941 https://svn.gostai.com/svn/kernel1/branches/1.0

	2007-02-21  Akim Demaille  <demaille@gostai.com>
	Do not use -relax-branch
	This option was used to enable long branches in the parser
	generated code.  This was needed because the rules used to use
	long macros which resulted in a huge switch statement.  Passing
	-O0 sufficed to address the issue.  In addition, I changed the
	macros into functions, which made -O0 useless.  Nevertheless
	the use -relax-branch was introduced, hoping that it would
	relieve us.  It actually made GCC produce incorrect code on
	the Aibo, with mysterious crashes.
	Removing the use of this option (and of -O0) solves this.
	Aibo works again.
	* src/parser/bison/bison.mk: Remove the use of PARSER_CXXFLAGS.

2007-02-22  Akim Demaille  <demaille@gostai.com>

	Use libport::mhas
	* src/userver.cc (UServer::work): Here.

2007-02-20  Akim Demaille  <demaille@gostai.com>

	eval_FUNCTION_<arity>
	* src/uexpression.hh, src/uexpression.cc (eval_FUNCTION_0)
	(eval_FUNCTION_1, eval_FUNCTION_2): New.
