@@ -1,5 +1,12 @@
 2007-02-24  Akim Demaille  <akim.demaille@free.fr>
 
+	Fix uninitialized variable warning
+	* src/userver.hh, src/userver.cc (memory): here.
+	While we're at it, give this function a proper prototype,
+	and useful variable names.
+
+2007-02-24  Akim Demaille  <akim.demaille@free.fr>
+
 	Scope reduction
 	* src/userver.cc (memory): Here.
 
